--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
-  <body>
+  <body oncontextmenu="return false" onkeydown="return true;" onmousedown="return true;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -43,8 +43,29 @@
     -->
     <script type="text/javascript" src="%PUBLIC_URL%/jquery.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/main.js"></script>
-    <script>
-      
+    <script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
+    <script type="text/javascript">
+      // Prevent the default refresh event under WINDOWS system
+      /*hotkeys('f12', function(event, handler){
+        event.preventDefault()
+        console.log('you pressed F12!')
+      });
+      hotkeys('alt+command+i, alt+command+  73', function(event){
+        event.preventDefault()
+        console.log('you pressed command+alt+i!')
+      });
+      hotkeys('alt+command+j, alt+command+  74', function(event){
+        event.preventDefault()
+        console.log('you pressed command+alt+j!')
+      });
+      hotkeys('ctrl+shift+i, ctrl+shift+  73', function(event){
+        event.preventDefault()
+        console.log('you pressed shift+ctrl+i!')
+      });
+      hotkeys('ctrl+shift+j, ctrl+shift+  74', function(event){
+        event.preventDefault()
+        console.log('you pressed shift+ctrl+j!')
+      });*/
     </script>
   </body>
 </html>
